src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_overlay_round_trip__ghostty-vt.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
hello-ready
guest:hello










                                                                                
           [0m[3;1H
