src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_overlay_round_trip__internal.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
hello-ready[m
guest:hello[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
                                                                                [m
           [m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
